...

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lx"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lpi"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/le"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/llb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lrb"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lla"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lback"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lac"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/ly"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lcos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/llog"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l0"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/ldot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lz"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lsin"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lpow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/l5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lequal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lg"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/ltan"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lcomma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lpercent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/ladd"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lminus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/lmul"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/ldiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...

        <Button
            android:id="@+id/result"
            android:layout_width="0dp"
            android:layout_height="match_parent"
...
